<resources>
    <string name="app_name">UrbanMobility</string>
    <string name="app_message">The app to guide your path!</string>
    <string name="user_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_text">Not part of the community? Register now!</string>
    <string name="registration_chance">Now you may be part of the community!</string>
    <string name="repeat_password">Password x 2</string>
    <string name="passwords_no_match_error">Passwords must match!</string>
    <string name="weak_password_error">Password is too weak!</string>
    <string name="invalid_email_error">E-mail is invalid!</string>
    <string name="email_exists_error">E-mail already registered!</string>
    <string name="bad_credentials_error">Bad credentials!</string>
    <string name="empty_email_error">E-mail field must not be empty!</string>
    <string name="empty_password_error">Password field must not be empty!</string>
    <string name="register">Register</string>
    <string name="title_activity_add_station">AddAStationActivity</string>
    <string name="station_name">Station Name</string>
    <string name="street_name">Street Name</string>
    <string name="street_number">Street number</string>
    <string name="arrival_time">Arrival time</string>
    <string name="departure_time">Departure time</string>
    <string name="city">City</string>
    <string name="street_name_required_error">Street name required</string>
    <string name="station_name_required">Station name required</string>
    <string name="time">Time required</string>
    <string name="street_number_required_error">Street number required</string>
    <string name="postal_code_required_error">Postal code required</string>
    <string name="city_required_error">City required</string>
    <string name="country_required_error">Country required</string>
    <string name="home">Home</string>
    <string name="settings">User profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number_of_rooms_required_error">Please input number of rooms</string>
    <string name="construction_year_required_error">Construction year required</string>
    <string name="rental_price_required_error">Rental price required</string>
    <string name="route_number_required">Route number required</string>
    <string name="username">Username</string>
    <string name="new_password">New password</string>
    <string name="phone_number">Phone number</string>
    <string name="update_settings">Update settings</string>
    <string name="logout">Logout</string>
    <string name="could_not_update_password">Could not update password!</string>
    <string name="settings_updated">User settings were updated!</string>
    <string name="change_user_image">Change user image</string>
    <string name="upload_successful">Profile photo successfully uploaded</string>
    <string name="add_stations">Add stations</string>
    <string name="add_station">Add station</string>
    <string name="get_routes">Get routes</string>
    <string name="clear_routes">Clear routes</string>
    <string name="add_route">Add route</string>
    <string name="routes">Routes</string>
    <string name="location">Location</string>
    <string name="notifications">Notifications</string>
    <string name="app_title">Urban
        Mobility</string>
    <string name="ride_safe_ride_smart">Ride safe.
        Ride smart.</string>
    <string name="route_number">Route number:</string>
    <string name="estimated_route_time">Estimated route time:</string>
    <string name="add_a_route">Add a route</string>

</resources>
