<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbarThumbVertical="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/user"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.060000002" />

            <EditText
                android:id="@+id/userEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/user_mail"
                android:inputType="textPersonName|textEmailAddress"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/change_image"
                app:layout_constraintStart_toStartOf="@+id/change_image"
                app:layout_constraintTop_toBottomOf="@+id/change_image"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/currentPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/userEmail"
                app:layout_constraintStart_toStartOf="@+id/userEmail"
                app:layout_constraintTop_toBottomOf="@+id/userUsername"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/newPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/currentPassword"
                app:layout_constraintStart_toStartOf="@+id/currentPassword"
                app:layout_constraintTop_toBottomOf="@+id/currentPassword"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/userUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/userEmail"
                app:layout_constraintStart_toStartOf="@+id/userEmail"
                app:layout_constraintTop_toBottomOf="@+id/userEmail"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/newPassword"
                app:layout_constraintStart_toStartOf="@+id/newPassword"
                app:layout_constraintTop_toBottomOf="@+id/newPassword"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/updateButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/update_settings"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/phoneNumber"
                app:layout_constraintStart_toStartOf="@+id/phoneNumber"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="64dp"
                android:text="@string/logout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/updateButton"
                app:layout_constraintStart_toStartOf="@+id/updateButton"
                app:layout_constraintTop_toBottomOf="@+id/updateButton"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/change_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/change_user_image"
                android:textColor="@android:color/holo_blue_dark"
                app:layout_constraintEnd_toEndOf="@+id/profile_image"
                app:layout_constraintStart_toStartOf="@+id/profile_image"
                app:layout_constraintTop_toBottomOf="@+id/profile_image" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>