<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddStationActivity">

    <EditText
        android:id="@+id/stationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_green_view_background"
        android:ems="10"
        android:hint="@string/station_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/greenBG"
        android:textColorHint="@color/greenBG"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/streetName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_green_view_background"
        android:ems="10"
        android:hint="@string/street_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/greenBG"
        android:textColorHint="@color/greenBG"
        app:layout_constraintEnd_toEndOf="@+id/stationName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/stationName"
        app:layout_constraintTop_toBottomOf="@+id/stationName" />

    <EditText
        android:id="@+id/arrivalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_green_view_background"
        android:ems="10"
        android:hint="@string/arrival_time"
        android:inputType="time"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/greenBG"
        android:textColorHint="@color/greenBG"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/streetName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/streetName"
        app:layout_constraintTop_toBottomOf="@+id/streetName"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/departureTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_green_view_background"
        android:ems="10"
        android:hint="@string/departure_time"
        android:inputType="time"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/greenBG"
        android:textColorHint="@color/greenBG"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/arrivalTime"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/arrivalTime"
        app:layout_constraintTop_toBottomOf="@+id/arrivalTime"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/addStation"
        android:layout_width="199dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_green_bacground_filled"
        android:text="@string/add_station"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/departureTime"
        app:layout_constraintStart_toStartOf="@+id/departureTime"
        app:layout_constraintTop_toBottomOf="@+id/departureTime" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/addStations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addStation" />

    <Button
        android:id="@+id/addStations"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/custom_green_bacground_filled"
        android:text="@string/add_stations"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/addStation"
        app:layout_constraintStart_toStartOf="@+id/addStation" />


</androidx.constraintlayout.widget.ConstraintLayout>